--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -2,7 +2,9 @@ before:
   hooks:
   - go mod download
 builds:
--
+- <<: &build_defaults
+    ldflags:
+      - -s -w -X github.com/dunglas/mercure/cmd.version={{ .Version }} -X github.com/dunglas/mercure/cmd.buildDate={{ .Date }}
   env:
     - CGO_ENABLED=0
   goos:
