--- a/mercure.yaml
+++ b/mercure.yaml
@@ -12,7 +12,5 @@ subscriptions: true
 dispatch_timeout: 5s
 #write_timeout: 10s
 
-telemetry:
-    enabled: true
-
-    addr: 127.0.0.1:3002
+metrics_enabled: false
+metrics_addr: 127.0.0.1:3002
