--- a/helm/mercure/templates/secrets.yaml
+++ b/helm/mercure/templates/secrets.yaml
@@ -6,7 +6,7 @@ metadata:
     {{- include "mercure.labels" . | nindent 4 }}
 type: Opaque
 data:
-  transport-url: {{ .Values.transportURL | b64enc | quote }}
-  publisher-jwt-key: {{ .Values.jwt.publisher.key | default (randAlphaNum 40) | b64enc | quote }}
-  subscriber-jwt-key: {{ .Values.jwt.subscriber.key | default (randAlphaNum 40) | b64enc | quote }}
+  transport-url: {{ .Values.transportUrl | b64enc | quote }}
+  publisher-jwt-key: {{ .Values.publisherJwtKey | default (randAlphaNum 40) | b64enc | quote }}
+  subscriber-jwt-key: {{ .Values.subscriberJwtKey | default (randAlphaNum 40) | b64enc | quote }}
   extra-directives: {{ .Values.extraDirectives | b64enc | quote }}
