--- a/helm/mercure/values.yaml
+++ b/helm/mercure/values.yaml
@@ -2,19 +2,29 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
+# debug enables the debug mode
 debug: false
+# dev enables the development mode, including the debug UI and the demo
 dev: false
-transportURL: bolt:///data/mercure.db
+# transportUrl is the URL representation of the transport to use
+transportUrl: bolt:///data/mercure.db
+# extraDirectives are extra Mercure directives to include in the Caddyfile
 extraDirectives: ""
 
-jwt:
-  publisher:
-    key: ""
-    alg: HS256
-  subscriber:
-    key: ""
-    alg: HS256
+# publisherJwtKey is the JWT key to use for publishers, a random key will be generated if empty
+publisherJwtKey: ""
+# publisherJwtAlg the JWT algorithm to use for publishers
+publisherJwtAlg: HS256
 
+# subscriberJwtKey is the JWT key to use for subscribers, a random key will be generated if empty
+subscriberJwtKey: ""
+# subscriberJwtAlg the JWT algorithm to use for subscribers
+subscriberJwtAlg: HS256
+
+# license is your High Availability version license key (not necessary is you use the FOSS version): https://mercure.rocks/docs/hub/cluster
+license: ""
+
+# replicaCount is the number of replicas to create, this value must be 1 unless you are use the High Availability version: https://mercure.rocks/docs/hub/cluster
 replicaCount: 1
 
 image:
@@ -82,6 +92,7 @@ resources: {}
   #   cpu: 100m
   #   memory: 128Mi
 
+# autoscaling must not be enabled unless you are using the High Availability version: https://mercure.rocks/docs/hub/cluster
 autoscaling:
   enabled: false
   minReplicas: 1
