add support for volumes

--- a/helm/mercure/templates/configmap.yaml
+++ b/helm/mercure/templates/configmap.yaml
@@ -6,5 +6,5 @@ metadata:
     {{- include "mercure.labels" . | nindent 4 }}
 data:
   debug: "{{ if .Values.debug }}debug{{ end }}"
-  publisher-jwt-alg: {{ .Values.publisherJwtKey | quote }}
+  publisher-jwt-alg: {{ .Values.publisherJwtAlg | quote }}
   subscriber-jwt-alg: {{ .Values.subscriberJwtAlg | quote }}
