--- a/helm/mercure/templates/deployment.yaml
+++ b/helm/mercure/templates/deployment.yaml
@@ -75,6 +75,11 @@ spec:
                 secretKeyRef:
                   name: {{ include "mercure.fullname" . }}
                   key: extra-directives
+          {{- if .Values.persistence.enabled }}
+          volumeMounts:
+            - mountPath: /data
+              name: mercure-data
+          {{- end }}
           ports:
             - name: http
               containerPort: 80
@@ -104,4 +109,10 @@ spec:
       {{- with .Values.tolerations }}
       tolerations:
         {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- if .Values.persistence.enabled }}
+      volumes:
+        - name: mercure-data
+          persistentVolumeClaim:
+            claimName: {{ .Values.persistence.existingClaim | default (include "mercure.fullname" .) }}
       {{- end }}
