--- a/charts/mercure/templates/tests/test-connection.yaml
+++ b/charts/mercure/templates/tests/test-connection.yaml
@@ -11,5 +11,5 @@ spec:
     - name: wget
       image: busybox
       command: ['wget']
-      args: ['{{ include "mercure.fullname" . }}:{{ .Values.service.port }}']
+      args: ['{{ include "mercure.fullname" . }}:{{ .Values.service.port }}/healthz']
   restartPolicy: Never
