--- a/.github/workflows/charts.yml
+++ b/.github/workflows/charts.yml
@@ -5,6 +5,8 @@ on: pull_request
 jobs:
   lint-test:
     runs-on: ubuntu-latest
+    env:
+      CT_TARGET_BRANCH: main
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -26,17 +28,17 @@ jobs:
       - name: Run chart-testing (list-changed)
         id: list-changed
         run: |
-          changed=$(ct list-changed --target-branch=main)
+          changed=$(ct list-changed)
           if [[ -n "$changed" ]]; then
             echo "::set-output name=changed::true"
           fi
 
       - name: Run chart-testing (lint)
-        run: ct lint --target-branch=main
+        run: ct lint
 
       - name: Create kind cluster
         uses: helm/kind-action@v1.0.0
         if: steps.list-changed.outputs.changed == 'true'
 
       - name: Run chart-testing (install)
-        run: ct install --target-branch=main
+        run: ct install
