feat: add redis transport

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -35,20 +35,6 @@ builds:
     - 5
     - 6
     - 7
-# Legacy build
-- id: legacy
-  dir: cmd/mercure
-  ldflags:
-    - -s -w -X github.com/dunglas/mercure/common.version={{ .Version }} -X github.com/dunglas/mercure/common.commit={{ .ShortCommit }} -X github.com/dunglas/mercure/common.buildDate={{ .Date }}
-  goos:
-    - linux
-    - darwin
-    - windows
-  goarch:
-    - 386
-    - amd64
-    - arm
-    - arm64
 archives:
 - builds:
   - caddy
@@ -67,33 +53,16 @@ archives:
   format_overrides:
   - goos: windows
     format: zip
-- id: legacy
-  builds:
-  - legacy
-  name_template: "{{ .ProjectName }}-legacy_{{ .Version }}_{{ .Os }}_{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}{{ if .Mips }}_{{ .Mips }}{{ end }}"
-  replacements:
-    darwin: Darwin
-    linux: Linux
-    windows: Windows
-    386: i386
-    amd64: x86_64
-  files:
-  - COPYRIGHT
-  - LICENSE
-  - README.md
-  format_overrides:
-  - goos: windows
-    format: zip
 dockers:
 - ids:
   - caddy
   goos: linux
   goarch: amd64
   image_templates:
-  - 'dunglas/mercure:{{ .Tag }}-amd64'
-  - 'dunglas/mercure:v{{ .Major }}-amd64'
-  - 'dunglas/mercure:v{{ .Major }}.{{ .Minor }}-amd64'
-  - 'dunglas/mercure:latest-amd64'
+  - 'ghcr.io/devmachine-fr/mercure/mercure:{{ .Tag }}-amd64'
+  - 'ghcr.io/devmachine-fr/mercure/mercure:v{{ .Major }}-amd64'
+  - 'ghcr.io/devmachine-fr/mercure/mercure:v{{ .Major }}.{{ .Minor }}-amd64'
+  - 'ghcr.io/devmachine-fr/mercure/mercure:latest-amd64'
   use: buildx
   build_flag_templates:
   - "--platform=linux/amd64"
@@ -105,41 +74,33 @@ dockers:
   goos: linux
   goarch: arm64
   image_templates:
-  - 'dunglas/mercure:{{ .Tag }}-arm64v8'
-  - 'dunglas/mercure:v{{ .Major }}-arm64v8'
-  - 'dunglas/mercure:v{{ .Major }}.{{ .Minor }}-arm64v8'
-  - 'dunglas/mercure:latest-arm64v8'
+  - 'ghcr.io/devmachine-fr/mercure/mercure:{{ .Tag }}-arm64v8'
+  - 'ghcr.io/devmachine-fr/mercure/mercure:v{{ .Major }}-arm64v8'
+  - 'ghcr.io/devmachine-fr/mercure/mercure:v{{ .Major }}.{{ .Minor }}-arm64v8'
+  - 'ghcr.io/devmachine-fr/mercure/mercure:latest-arm64v8'
   use: buildx
   build_flag_templates:
   - "--platform=linux/arm64/v8"
   extra_files:
   - Caddyfile
   - Caddyfile.dev
-- ids:
-  - legacy
-  dockerfile: Dockerfile.legacy
-  image_templates:
-  - 'dunglas/mercure:legacy-{{ .Tag }}'
-  - 'dunglas/mercure:legacy-v{{ .Major }}'
-  - 'dunglas/mercure:legacy-v{{ .Major }}.{{ .Minor }}'
-  - 'dunglas/mercure:legacy-latest'
 docker_manifests:
-- name_template: dunglas/mercure:{{ .Tag }}
+- name_template: ghcr.io/devmachine-fr/mercure/mercure:{{ .Tag }}
   image_templates:
-  - dunglas/mercure:{{ .Tag }}-amd64
-  - dunglas/mercure:{{ .Tag }}-arm64v8
-- name_template: dunglas/mercure:v{{ .Major }}
+  - ghcr.io/devmachine-fr/mercure/mercure:{{ .Tag }}-amd64
+  - ghcr.io/devmachine-fr/mercure/mercure:{{ .Tag }}-arm64v8
+- name_template: ghcr.io/devmachine-fr/mercure/mercure:v{{ .Major }}
   image_templates:
-  - dunglas/mercure:v{{ .Major }}-amd64
-  - dunglas/mercure:v{{ .Major }}-arm64v8
-- name_template: dunglas/mercure:v{{ .Major }}.{{ .Minor }}
+  - ghcr.io/devmachine-fr/mercure/mercure:v{{ .Major }}-amd64
+  - ghcr.io/devmachine-fr/mercure/mercure:v{{ .Major }}-arm64v8
+- name_template: ghcr.io/devmachine-fr/mercure/mercure:v{{ .Major }}.{{ .Minor }}
   image_templates:
-  - dunglas/mercure:v{{ .Major }}.{{ .Minor }}-amd64
-  - dunglas/mercure:v{{ .Major }}.{{ .Minor }}-arm64v8
-- name_template: dunglas/mercure:latest
+  - ghcr.io/devmachine-fr/mercure/mercure:v{{ .Major }}.{{ .Minor }}-amd64
+  - ghcr.io/devmachine-fr/mercure/mercure:v{{ .Major }}.{{ .Minor }}-arm64v8
+- name_template: ghcr.io/devmachine-fr/mercure/mercure:latest
   image_templates:
-  - dunglas/mercure:latest-amd64
-  - dunglas/mercure:latest-arm64v8
+  - ghcr.io/devmachine-fr/mercure/mercure:latest-amd64
+  - ghcr.io/devmachine-fr/mercure/mercure:latest-arm64v8
 signs:
   - artifacts: checksum
-    args: ["--batch", "-u", "{{ .Env.GPG_FINGERPRINT }}", "--output", "${signature}", "--detach-sign", "${artifact}"]
+    args: ["--batch", "--output", "${signature}", "--detach-sign", "${artifact}"]
