--- a/charts/mercure/templates/deployment.yaml
+++ b/charts/mercure/templates/deployment.yaml
@@ -47,11 +47,11 @@ spec:
                 configMapKeyRef:
                   name: {{ include "mercure.fullname" . }}
                   key: global-options
-            - name: CADDY_EXTRA_DIRECTIVES
+            - name: EXTRA_DIRECTIVES
               valueFrom:
                 configMapKeyRef:
                   name: {{ include "mercure.fullname" . }}
-                  key: caddy-extra-directives
+                  key: extra-directives
             - name: MERCURE_TRANSPORT_URL
               valueFrom:
                 secretKeyRef:
