--- a/cmd/mercure/mercure.yaml
+++ b/cmd/mercure/mercure.yaml
@@ -5,7 +5,7 @@ allow_anonymous: true
 #key_file: fixtures/tls/server.key
 cors_allowed_origins: [http://localhost:3000, http://localhost:3001, http://localhost:5000, http://localhost:8000]
 transport_url: bolt://update.db
-jwt_key: '!ChangeMe!'
+jwt_key: '!ChangeThisMercureHubJWTSecretKey!'
 publish_allowed_origins: [http://localhost:3000, http://localhost:3001, http://localhost:5000, http://localhost:8000]
 subscriptions: true
 
