--- a/.github/workflows/ci-chart.yml
+++ b/.github/workflows/ci-chart.yml
@@ -1,8 +1,8 @@
 name: Lint and Test Chart
 
 on:
- push:
- pull_request:
+  push:
+  pull_request:
 
 jobs:
   lint-test:
@@ -32,7 +32,7 @@ jobs:
         run: |
           changed=$(ct list-changed)
           if [[ -n "$changed" ]]; then
-            echo "::set-output name=changed::true"
+            echo "changed=true" >> "$GITHUB_OUTPUT"
           fi
 
       - name: Run chart-testing (lint)
