remvoe deprecated linters

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -27,6 +27,11 @@ linters:
     - scopelint
     - golint
     - exhaustivestruct
+    - varcheck
+    - ifshort
+    - deadcode
+    - nosnakecase
+    - structcheck
 
 issues:
   exclude-rules:
