feat: upgrade Caddy to version 2.6.2 (#736)
* feat: upgrade Caddy to version 2.6.2

* fix

* remvoe deprecated linters

* skip Caddy tests

* fix: linter

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -18,6 +18,8 @@ linters:
     - varnamelen
     - nonamedreturns
     - testableexamples
+    # Weird issues
+    - nolintlint
 
     # deprecated
     - interfacer
@@ -25,6 +27,11 @@ linters:
     - scopelint
     - golint
     - exhaustivestruct
+    - varcheck
+    - ifshort
+    - deadcode
+    - nosnakecase
+    - structcheck
 
 issues:
   exclude-rules:
