--- a/charts/mercure/templates/secrets.yaml
+++ b/charts/mercure/templates/secrets.yaml
@@ -7,8 +7,12 @@ metadata:
 type: Opaque
 data:
   transport-url: {{ .Values.transportUrl | b64enc | quote }}
+{{- if not .Values.publisherJwtSecret }}
   publisher-jwt-key: {{ .Values.publisherJwtKey | default (randAlphaNum 40) | b64enc | quote }}
+{{- end }}
+{{- if not .Values.subscriberJwtSecret }}
   subscriber-jwt-key: {{ .Values.subscriberJwtKey | default (randAlphaNum 40) | b64enc | quote }}
+{{- end }}
   extra-directives: {{ .Values.extraDirectives | b64enc | quote }}
   license: {{ .Values.license | b64enc | quote }}
   caddy-extra-directives: {{ .Values.caddyExtraDirectives | b64enc | quote }}
