--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,9 @@ jobs:
       - uses: actions/setup-go@v4
         with:
           go-version: '1.20'
+          cache-dependency-path: |
+            go.sum
+            caddy/go.sum
 
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v3
@@ -35,18 +38,9 @@ jobs:
         uses: actions/setup-go@v4
         with:
           go-version: '1.20'
-
-      - uses: actions/cache@v3
-        with:
-          path: |
-            ~/go/pkg/mod              # Module download cache
-            ~/.cache/go-build         # Build cache (Linux)
-          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
-          restore-keys: |
-            ${{ runner.os }}-go-
-
-      - name: Install project dependencies
-        run: go get
+          cache-dependency-path: |
+            go.sum
+            caddy/go.sum
 
       - name: Use go-deadlock
         run: ./tests/use-go-deadlock.sh
@@ -74,19 +68,14 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: '16'
-
-      - uses: actions/cache@v3
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
+          cache: 'npm'
+          cache-dependency-path: conformance-tests/package-lock.json
 
       - name: Install Playwrigth dependencies
         working-directory: conformance-tests/
         run: npm ci
 
-      - name: Install Playwright
+      - name: Install playwright browsers
         working-directory: conformance-tests/
         run: npx playwright install --with-deps
 
