--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,10 @@ jobs:
           version: latest
 
   test:
+    strategy:
+      matrix:
+        go: [ '1.19', '1.20' ]
+
     name: Test
     runs-on: ubuntu-latest
     steps:
@@ -37,7 +41,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
-          go-version: '1.20'
+          go-version: ${{ matrix.go }}
           cache-dependency-path: |
             go.sum
             caddy/go.sum
