--- a/Caddyfile
+++ b/Caddyfile
@@ -32,6 +32,7 @@ route {
 		{$MERCURE_EXTRA_DIRECTIVES}
 	}
 
+    header / Content-Type "text/html; charset=utf-8"
     respond / `<!DOCTYPE html>
 <html lang=en>
 <meta charset="utf-8">
