use GoReleaser instead

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -22,6 +22,8 @@ env:
 builds:
 - id: caddy
   dir: caddy/mercure
+  ldflags:
+  - -X 'github.com/caddyserver/caddy/v2.CustomVersion=Mercure.rocks {{ .Version }} Caddy'
   goos:
   - linux
   - darwin
