--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,147 +1,157 @@
 before:
   hooks:
-  - go mod download
+    - go mod tidy
 checksum:
-  name_template: 'checksums.txt'
+  name_template: "checksums.txt"
 snapshot:
-  name_template: "{{ .Tag }}-next"
+  name_template: "{{ incpatch .Version }}-next"
 changelog:
   sort: asc
   filters:
     exclude:
-    - '^docs:'
-    - '^test:'
-    - '^ci:'
-    - '^build:'
-    - '^chore:'
-    - '^Merge'
+      - "^docs:"
+      - "^test:"
+      - "^ci:"
+      - "^build:"
+      - "^chore:"
+      - "^Merge"
 release:
   prerelease: auto
 env:
-- CGO_ENABLED=0
+  - CGO_ENABLED=0
 builds:
-- id: caddy
-  dir: caddy/mercure
-  ldflags:
-  - -X 'github.com/caddyserver/caddy/v2.CustomVersion=Mercure.rocks {{ .Version }} Caddy'
-  goos:
-  - linux
-  - darwin
-  - windows
-  goarch:
-  - '386'
-  - amd64
-  - arm
-  - arm64
-  goarm:
-  - '5'
-  - '6'
-  - '7'
-# Legacy build
-- id: legacy
-  dir: cmd/mercure
-  ldflags:
-  - -s -w -X github.com/dunglas/mercure/common.version={{ .Version }} -X github.com/dunglas/mercure/common.commit={{ .ShortCommit }} -X github.com/dunglas/mercure/common.buildDate={{ .Date }}
-  goos:
-  - linux
-  - darwin
-  - windows
-  goarch:
-  - '386'
-  - amd64
-  - arm
-  - arm64
+  - id: caddy
+    dir: caddy/mercure
+    ldflags:
+      - -X 'github.com/caddyserver/caddy/v2.CustomVersion=Mercure.rocks {{ .Version }} Caddy'
+    goos:
+      - linux
+      - darwin
+      - windows
+    goarch:
+      - "386"
+      - amd64
+      - arm
+      - arm64
+    goarm:
+      - "5"
+      - "6"
+      - "7"
+  # Legacy build
+  - id: legacy
+    dir: cmd/mercure
+    ldflags:
+      - -s -w -X github.com/dunglas/mercure/common.version={{ .Version }} -X github.com/dunglas/mercure/common.commit={{ .ShortCommit }} -X github.com/dunglas/mercure/common.buildDate={{ .Date }}
+    goos:
+      - linux
+      - darwin
+      - windows
+    goarch:
+      - "386"
+      - amd64
+      - arm
+      - arm64
 archives:
-- builds:
-  - caddy
-  replacements:
-    darwin: Darwin
-    linux: Linux
-    windows: Windows
-    386: i386
-    amd64: x86_64
-  files:
-  - COPYRIGHT
-  - LICENSE
-  - README.md
-  - Caddyfile
-  - Caddyfile.dev
-  format_overrides:
-  - goos: windows
-    format: zip
-- id: legacy
-  builds:
-  - legacy
-  name_template: "{{ .ProjectName }}-legacy_{{ .Version }}_{{ .Os }}_{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}{{ if .Mips }}_{{ .Mips }}{{ end }}"
-  replacements:
-    darwin: Darwin
-    linux: Linux
-    windows: Windows
-    386: i386
-    amd64: x86_64
-  files:
-  - COPYRIGHT
-  - LICENSE
-  - README.md
-  format_overrides:
-  - goos: windows
-    format: zip
+  - builds:
+      - caddy
+    name_template: >-
+      {{ .ProjectName }}_
+      {{- title .Os }}_
+      {{- if eq .Arch "amd64" }}x86_64
+      {{- else if eq .Arch "386" }}i386
+      {{- else }}{{ .Arch }}{{ end }}
+      {{- if .Arm }}v{{ .Arm }}{{ end }}
+    files:
+      - COPYRIGHT
+      - LICENSE
+      - README.md
+      - Caddyfile
+      - Caddyfile.dev
+    format_overrides:
+      - goos: windows
+        format: zip
+  - id: legacy
+    builds:
+      - legacy
+    name_template: >-
+      {{ .ProjectName }}-legacy_
+      {{- title .Os }}_
+      {{- if eq .Arch "amd64" }}x86_64
+      {{- else if eq .Arch "386" }}i386
+      {{- else }}{{ .Arch }}{{ end }}
+      {{- if .Arm }}v{{ .Arm }}{{ end }}
+    files:
+      - COPYRIGHT
+      - LICENSE
+      - README.md
+    format_overrides:
+      - goos: windows
+        format: zip
 dockers:
-- ids:
-  - caddy
-  goos: linux
-  goarch: amd64
-  image_templates:
-  - 'dunglas/mercure:{{ .Tag }}-amd64'
-  - 'dunglas/mercure:v{{ .Major }}-amd64'
-  - 'dunglas/mercure:v{{ .Major }}.{{ .Minor }}-amd64'
-  - 'dunglas/mercure:latest-amd64'
-  use: buildx
-  build_flag_templates:
-  - "--platform=linux/amd64"
-  extra_files:
-  - Caddyfile
-  - Caddyfile.dev
-- ids:
-  - caddy
-  goos: linux
-  goarch: arm64
-  image_templates:
-  - 'dunglas/mercure:{{ .Tag }}-arm64v8'
-  - 'dunglas/mercure:v{{ .Major }}-arm64v8'
-  - 'dunglas/mercure:v{{ .Major }}.{{ .Minor }}-arm64v8'
-  - 'dunglas/mercure:latest-arm64v8'
-  use: buildx
-  build_flag_templates:
-  - "--platform=linux/arm64/v8"
-  extra_files:
-  - Caddyfile
-  - Caddyfile.dev
-- ids:
-  - legacy
-  dockerfile: Dockerfile.legacy
-  image_templates:
-  - 'dunglas/mercure:legacy-{{ .Tag }}'
-  - 'dunglas/mercure:legacy-v{{ .Major }}'
-  - 'dunglas/mercure:legacy-v{{ .Major }}.{{ .Minor }}'
-  - 'dunglas/mercure:legacy-latest'
+  - ids:
+      - caddy
+    goos: linux
+    goarch: amd64
+    image_templates:
+      - "dunglas/mercure:{{ .Tag }}-amd64"
+      - "dunglas/mercure:v{{ .Major }}-amd64"
+      - "dunglas/mercure:v{{ .Major }}.{{ .Minor }}-amd64"
+      - "dunglas/mercure:latest-amd64"
+    use: buildx
+    build_flag_templates:
+      - "--platform=linux/amd64"
+    extra_files:
+      - Caddyfile
+      - Caddyfile.dev
+  - ids:
+      - caddy
+    goos: linux
+    goarch: arm64
+    image_templates:
+      - "dunglas/mercure:{{ .Tag }}-arm64v8"
+      - "dunglas/mercure:v{{ .Major }}-arm64v8"
+      - "dunglas/mercure:v{{ .Major }}.{{ .Minor }}-arm64v8"
+      - "dunglas/mercure:latest-arm64v8"
+    use: buildx
+    build_flag_templates:
+      - "--platform=linux/arm64/v8"
+    extra_files:
+      - Caddyfile
+      - Caddyfile.dev
+  - ids:
+      - legacy
+    dockerfile: Dockerfile.legacy
+    image_templates:
+      - "dunglas/mercure:legacy-{{ .Tag }}"
+      - "dunglas/mercure:legacy-v{{ .Major }}"
+      - "dunglas/mercure:legacy-v{{ .Major }}.{{ .Minor }}"
+      - "dunglas/mercure:legacy-latest"
 docker_manifests:
-- name_template: dunglas/mercure:{{ .Tag }}
-  image_templates:
-  - dunglas/mercure:{{ .Tag }}-amd64
-  - dunglas/mercure:{{ .Tag }}-arm64v8
-- name_template: dunglas/mercure:v{{ .Major }}
-  image_templates:
-  - dunglas/mercure:v{{ .Major }}-amd64
-  - dunglas/mercure:v{{ .Major }}-arm64v8
-- name_template: dunglas/mercure:v{{ .Major }}.{{ .Minor }}
-  image_templates:
-  - dunglas/mercure:v{{ .Major }}.{{ .Minor }}-amd64
-  - dunglas/mercure:v{{ .Major }}.{{ .Minor }}-arm64v8
-- name_template: dunglas/mercure:latest
-  image_templates:
-  - dunglas/mercure:latest-amd64
-  - dunglas/mercure:latest-arm64v8
+  - name_template: dunglas/mercure:{{ .Tag }}
+    image_templates:
+      - dunglas/mercure:{{ .Tag }}-amd64
+      - dunglas/mercure:{{ .Tag }}-arm64v8
+  - name_template: dunglas/mercure:v{{ .Major }}
+    image_templates:
+      - dunglas/mercure:v{{ .Major }}-amd64
+      - dunglas/mercure:v{{ .Major }}-arm64v8
+  - name_template: dunglas/mercure:v{{ .Major }}.{{ .Minor }}
+    image_templates:
+      - dunglas/mercure:v{{ .Major }}.{{ .Minor }}-amd64
+      - dunglas/mercure:v{{ .Major }}.{{ .Minor }}-arm64v8
+  - name_template: dunglas/mercure:latest
+    image_templates:
+      - dunglas/mercure:latest-amd64
+      - dunglas/mercure:latest-arm64v8
 signs:
-- artifacts: checksum
-  args: ["--batch", "-u", "{{ .Env.GPG_FINGERPRINT }}", "--output", "${signature}", "--detach-sign", "${artifact}"]
+  - artifacts: checksum
+    args:
+      [
+        "--batch",
+        "-u",
+        "{{ .Env.GPG_FINGERPRINT }}",
+        "--output",
+        "${signature}",
+        "--detach-sign",
+        "${artifact}",
+      ]
