--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -5,7 +5,11 @@ on:
     tags:
       - 'v*'
     branches:
-      - ci/goreleaser-replacements
+      - '*'
+  pull_request:
+
+permissions:
+  contents: write
 
 jobs:
   release:
@@ -15,31 +19,40 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
+
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
           go-version: '1.20'
+          cache-dependency-path: |
+            go.sum
+            caddy/go.sum
+
       - name: Login to Docker Hub
+        if: startsWith(github.ref, 'refs/tags/v')
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
+
       - name: Import GPG key
         id: import_gpg
         uses: crazy-max/ghaction-import-gpg@v5
         with:
           gpg_private_key: ${{ secrets.GPG_PRIVATE_KEY }}
           passphrase: ${{ secrets.PASSPHRASE }}
+
       - name: Set GoReleaser Git tags
         run:
           tags=$(git tag --list --sort=-version:refname 'v*')
           echo "GORELEASER_CURRENT_TAG=$(awk 'NR==1 {print;exit}' <<< $tags)"  >> "$GITHUB_ENV"
           echo "GORELEASER_PREVIOUS_TAG=$(awk 'NR==2 {print;exit}' <<< $tags)"  >> "$GITHUB_ENV"
+
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v4
         with:
           version: latest
-          args: release --clean --snapshot
+          args: release --clean ${{startsWith(github.ref, 'refs/tags/v') && '' || '--snapshot'}}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GPG_FINGERPRINT: ${{ steps.import_gpg.outputs.fingerprint }}
