--- a/charts/mercure/templates/secrets.yaml
+++ b/charts/mercure/templates/secrets.yaml
@@ -1,3 +1,4 @@
+{{- if not .Values.existingSecret }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -12,3 +13,4 @@ data:
   extra-directives: {{ .Values.extraDirectives | b64enc | quote }}
   license: {{ .Values.license | b64enc | quote }}
   caddy-extra-directives: {{ .Values.caddyExtraDirectives | b64enc | quote }}
+{{- end}}
