feat: minor Caddyfile improvements

--- a/Caddyfile
+++ b/Caddyfile
@@ -1,6 +1,6 @@
 # Learn how to configure the Mercure.rocks Hub on https://mercure.rocks/docs/hub/config
 {
-	order mercure before request_header
+	order mercure after encode
 
 	{$GLOBAL_OPTIONS}
 }
