--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -13,7 +13,8 @@ jobs:
       - name: Lint Code Base
         uses: super-linter/super-linter/slim@v4
         env:
-          VALIDATE_ALL_CODEBASE: false
+          VALIDATE_ALL_CODEBASE: true
+          VALIDATE_GITLEAKS: false
           VALIDATE_GO: false
           VALIDATE_KUBERNETES_KUBEVAL: false
           DEFAULT_BRANCH: main
