--- a/.github/linters/.textlintrc
+++ b/.github/linters/.textlintrc
@@ -5,7 +5,7 @@
   "rules": {
     "terminology": {
         "defaultTerms": true,
-        "exclude": [
+        "terms": [
             "Internet-Draft"
         ]
     }
