--- a/.github/linters/.markdown-lint.yml
+++ b/.github/linters/.markdown-lint.yml
@@ -23,10 +23,7 @@ MD007:
   indent: 2                   # Unordered list indentation
 MD010:
   ignore_code_languages: [caddyfile]
-MD013:
-  line_length: 500
-  code_block_line_length: false
-  tables: false
+MD013: false
 MD026:
   punctuation: ".,;:!。，；:"  # List of not allowed
 MD029: false                  # Ordered list item prefix
