--- a/.github/linters/.textlintrc
+++ b/.github/linters/.textlintrc
@@ -6,7 +6,7 @@
     "terminology": {
         "defaultTerms": true,
         "exclude": [
-            "internet"
+          ["(?<=(?:\\w+[^.?!])? )internet\\b(?! explorer)", "internet"]
         ]
     }
   }
