--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -17,7 +17,7 @@ jobs:
           VALIDATE_GO: false
           VALIDATE_PHP_PHPCS: false
           VALIDATE_KUBERNETES_CONFORM: false
-          KUBERNETES_KUBEVAL: false
+          VALIDATE_KUBERNETES_KUBEVAL: false
           VALIDATE_TYPESCRIPT_STANDARD: false
           DEFAULT_BRANCH: main
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
