--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,22 +54,20 @@ jobs:
         run: go test -race -covermode atomic -coverprofile=profile.cov -coverpkg=github.com/dunglas/mercure ./...
 
       - name: Test Caddy module
+        working-directory: caddy/
         run: |
           go test -timeout 1m -race -covermode atomic -coverprofile=profile.cov -coverpkg=github.com/dunglas/mercure ./...
           sed '1d' profile.cov >> ../profile.cov
-        working-directory: ./caddy
 
       - name: Upload coverage results
-          
         uses: shogo82148/actions-goveralls@v1
         with:
           path-to-profile: profile.cov
           parallel: true
+
       - name: Start Mercure
-        run: |
-          cd caddy/mercure
-          sudo MERCURE_PUBLISHER_JWT_KEY='!ChangeThisMercureHubJWTSecretKey!' MERCURE_SUBSCRIBER_JWT_KEY='!ChangeThisMercureHubJWTSecretKey!' go run main.go start --config ../../Caddyfile.dev
-          cd -
+        working-directory: caddy/mercure/
+        run: sudo MERCURE_PUBLISHER_JWT_KEY='!ChangeThisMercureHubJWTSecretKey!' MERCURE_SUBSCRIBER_JWT_KEY='!ChangeThisMercureHubJWTSecretKey!' go run main.go start --config ../../Caddyfile.dev
 
       - uses: actions/setup-node@v3
         with:
