--- a/Caddyfile
+++ b/Caddyfile
@@ -10,7 +10,8 @@
 {$SERVER_NAME:localhost} {
 	log {
 		format filter {
-			wrap console
+			# Defaults to json while waiting for https://github.com/caddyserver/caddy/pull/5980
+			wrap json
 			fields {
 				uri query {
 					replace authorization REDACTED
@@ -43,6 +44,10 @@
 	<h1>Welcome to Mercure</h1>
 	<p>The URL of your hub is <code>/.well-known/mercure</code>.
 	Read the documentation on <a href="https://mercure.rocks">Mercure.rocks, real-time apps made easy</a>.`
+
+	skip_log /healthz
+	skip_log /favicon.ico
+	skip_log /robots.txt
 
 	respond /healthz 200
 	respond "Not Found" 404
