feat(helm): allow to configure the container port (#868)

--- a/charts/mercure/values.yaml
+++ b/charts/mercure/values.yaml
@@ -76,6 +76,8 @@ service:
   type: ClusterIP
   # -- Service port.
   port: 80
+  # -- Service target port.
+  targetPort: 80
   annotations: {}
 
 ingress:
